Avance - Cuatro Filtros y Una Busqueda en User

--- a/src/app/component/user/tolist-user/tolist-user.component.html
+++ b/src/app/component/user/tolist-user/tolist-user.component.html
@@ -11,7 +11,11 @@
     <h2 style="text-align: center;"> User List </h2>
 
   </div>
+  
   <div class="container">
+    <mat-form-field>
+      <input matInput (keyup)=filter($event) placeholder="Search"/>
+    </mat-form-field>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 my-custom-table">
 
       <ng-container matColumnDef="idUser">
